# peru_poverty_sat

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  environment.yml  pyproject.toml
.github/: pull_request_template.md
notebooks/: explore_sentinel_2.py
peru_poverty_sat/: config.py  constants.py
peru_poverty_sat/dataset/: enaho.py
peru_poverty_sat/modeling/: predict.py
